now imported more significant generated code for GetPullRequests
