# models/author.go
@@ -1,0 +1,66 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"encoding/json"
+
+	"github.com/go-swagger/go-swagger/errors"
+	"github.com/go-swagger/go-swagger/httpkit/validate"
+	"github.com/go-swagger/go-swagger/strfmt"
+)
+
+/*
+Author author
+
+swagger:model Author
+*/
+type Author struct {
+
+	/* Role role
+	 */
+	Role string `json:"role,omitempty"`
+
+	/* User user
+	 */
+	User *User `json:"user,omitempty"`
+}
+
+// Validate validates this author
+func (m *Author) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateRole(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+var authorRoleEnum []interface{}
+
+func (m *Author) validateRoleEnum(path, location string, value string) error {
+	if authorRoleEnum == nil {
+		var res []string
+		if err := json.Unmarshal([]byte(`["AUTHOR"]`), &res); err != nil {
+			return err
+		}
+		for _, v := range res {
+			authorRoleEnum = append(authorRoleEnum, v)
+		}
+	}
+	return validate.Enum(path, location, value, authorRoleEnum)
+}
+
+func (m *Author) validateRole(formats strfmt.Registry) error {
+
+	if err := m.validateRoleEnum("role", "body", m.Role); err != nil {
+		return err
+	}
+
+	return nil
+}
