# models/user.go
@@ -1,0 +1,39 @@
+package models
+
+import "github.com/go-swagger/go-swagger/strfmt"
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+/*
+User user
+
+swagger:model User
+*/
+type User struct {
+
+	/* DisplayName display name
+	 */
+	DisplayName string `json:"displayName,omitempty"`
+
+	/* EmailAddress email address
+	 */
+	EmailAddress string `json:"emailAddress,omitempty"`
+
+	/* ID id
+	 */
+	ID int64 `json:"id,omitempty"`
+
+	/* Name name
+	 */
+	Name string `json:"name,omitempty"`
+
+	/* Slug slug
+	 */
+	Slug string `json:"slug,omitempty"`
+}
+
+// Validate validates this user
+func (m *User) Validate(formats strfmt.Registry) error {
+	return nil
+}
